Aplicando la actualización automática mediante javascript
Se actualiza mediante javascript, el menu para cambiar de jornadas y las tarjetas donde se muestran los resultados de los partidos.

--- a/FootballSoccer/Resource/css/IndexStyle.css
+++ b/FootballSoccer/Resource/css/IndexStyle.css
@@ -202,6 +202,9 @@ td, th{
 .border-lr{
     border-left: 1px solid rgba(160,160,160, 0.5) !important;
     border-right: 1px solid rgba(160,160,160, 0.5) !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    border-radius: 30px !important;
 }
 
 .border-left{
